Tidy up stuff